--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
         </div>
       </section>
     </div>
+    <div></div>
     <script src="common.js"></script>
     <script src="script.js"></script>
   </body>
