--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
         </div>
         <div style="display: flex; gap: 20px">
           <div>
-            <a class="nav-card" href="config.html" class="fuel-name">
+            <a class="nav-card nav-card" href="config.html" class="fuel-name">
               ⚙️ Pump Config
             </a>
           </div>
           <div>
-            <a class="nav-card" href="shift.html" class="fuel-name">
+            <a class="nav-card nav-card" href="shift.html" class="fuel-name">
               📔 Shift Settlement
             </a>
           </div>
           <div>
-            <a class="nav-card" href="product.html" class="fuel-name">
+            <a class="nav-card nav-card" href="product.html" class="fuel-name">
               📦 Products Config
             </a>
           </div>
           <div>
-            <a class="nav-card" href="customer.html" class="fuel-name">
+            <a class="nav-card nav-card" href="customer.html" class="fuel-name">
               👨🏻‍💼 Customer Config
             </a>
           </div>
