--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
         "
       >
         <div>
-          <h1 style="margin: 0 0 6px; font-size: 28px">
+          <h1>
             ⛽ Devaramani Petrol Station Dashboard
           </h1>
           <div class="muted">Daily meter readings & monthly summary</div>
         </div>
         <div style="display: flex; gap: 20px">
           <div>
-            <a class="nav-card nav-card" href="config.html" class="fuel-name">
+            <a class="nav-card" href="config.html" >
               ⚙️ Pump Config
             </a>
           </div>
           <div>
-            <a class="nav-card nav-card" href="shift.html" class="fuel-name">
+            <a class="nav-card " href="shift.html" >
               📔 Shift Settlement
             </a>
           </div>
           <div>
-            <a class="nav-card nav-card" href="product.html" class="fuel-name">
+            <a class="nav-card" href="product.html">
               📦 Products Config
             </a>
           </div>
           <div>
-            <a class="nav-card nav-card" href="customer.html" class="fuel-name">
+            <a class="nav-card" href="customer.html">
               👨🏻‍💼 Customer Config
             </a>
           </div>
@@ -113,7 +113,6 @@
         </div>
       </section>
     </div>
-    <div></div>
     <script src="common.js"></script>
     <script src="script.js"></script>
   </body>
