--- a/customer.html
+++ b/customer.html
@@ -21,22 +21,22 @@
         </div>
         <div style="display: flex; gap: 20px">
           <div>
-            <a class="nav-card" href="index.html" class="fuel-name">
+            <a class="nav-card" href="index.html" >
               📈 Dashboard
             </a>
           </div>
           <div>
-            <a class="nav-card" href="config.html" class="fuel-name">
+            <a class="nav-card" href="config.html" >
               ⚙️ Pump Config
             </a>
           </div>
           <div>
-            <a class="nav-card" href="product.html" class="fuel-name">
+            <a class="nav-card" href="product.html" >
               📦 Products Config
             </a>
           </div>
           <div>
-            <a class="nav-card" href="shift.html" class="fuel-name">
+            <a class="nav-card" href="shift.html" >
               📔 Shift Settlement
             </a>
           </div>
