--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petrol Pump Dashboard</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -22,7 +22,7 @@
           </h1>
           <div class="muted">Daily meter readings & monthly summary</div>
         </div>
-        <div style="display: flex; gap: 20px">
+        <div class="nav-main">
           <div>
             <a class="nav-card" href="config.html" >
               ⚙️ Pump Config
