--- a/config.html
+++ b/config.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pump Config</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -19,7 +19,7 @@
           <h1 style="margin: 0 0 6px; font-size: 28px">⚙️ Pump Config</h1>
           <div class="muted">Add or edit pumps (fuel & name)</div>
         </div>
-        <div style="display: flex; gap: 20px">
+        <div class="nav-main">
           <div>
             <a class="nav-card" href="index.html" >
               📈 Dashboard
