--- a/customer.html
+++ b/customer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Credit Customers</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -19,7 +19,7 @@
           <h1 style="margin: 0 0 6px; font-size: 28px">👥 Credit Customers</h1>
           <div class="muted">Add customer Data</div>
         </div>
-        <div style="display: flex; gap: 20px">
+        <div class="nav-main">
           <div>
             <a class="nav-card" href="index.html" >
               📈 Dashboard
