--- a/product.html
+++ b/product.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products Inventory</title>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+    <script src="firebase-sync.js"></script>
+    <script src="common.js"></script>
+    <script src="product.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,24 +27,16 @@
         </div>
         <div class="nav-main">
           <div>
-            <a class="nav-card" href="index.html" >
-              📈 Dashboard
-            </a>
+            <a class="nav-card" href="index.html"> 📈 Dashboard </a>
           </div>
           <div>
-            <a class="nav-card" href="config.html" >
-              ⚙️ Pump Config
-            </a>
+            <a class="nav-card" href="config.html"> ⚙️ Pump Config </a>
           </div>
           <div>
-            <a class="nav-card" href="shift.html" >
-              📔 Shift Settlement
-            </a>
+            <a class="nav-card" href="shift.html"> 📔 Shift Settlement </a>
           </div>
           <div>
-            <a class="nav-card" href="customer.html" >
-              👨🏻‍💼 Customer Config
-            </a>
+            <a class="nav-card" href="customer.html"> 👨🏻‍💼 Customer Config </a>
           </div>
         </div>
       </header>
@@ -65,7 +63,5 @@
         </div>
       </section>
     </div>
-    <script src="common.js"></script>
-    <script src="product.js"></script>
   </body>
 </html>
