Working Fire base

--- a/index.html
+++ b/index.html
@@ -25,11 +25,8 @@
       >
         <div>
           <h1>⛽ Devaramani Petrol Station Dashboard</h1>
-<button id="login-button">Sign in with Google</button>
-
-<script>
-  document.getElementById("login-button").addEventListener("click", signInWithGoogle);
-</script>
+          <h1 id="UserName" class="muted">Welcome User!</h1>
+          <button id="login-button">Sign in with Google</button>
           <div class="muted">Daily meter readings & monthly summary</div>
         </div>
         <div class="nav-main">
