Shift PAge Validation

--- a/shift.html
+++ b/shift.html
@@ -153,7 +153,16 @@
         <div class="card-head"><h2>Settlement Totals</h2></div>
         <div class="card-body totals-grid">
           <div class="total-card">
-            Expected<br /><strong id="expectedAmt">₹0.00</strong>
+            Expected From Fuel<br /><strong id="expectedAmt">₹0.00</strong>
+          </div>
+            <div class="total-card">
+            Expected From Product<br /><strong id="expectedProductAmt">₹0.00</strong>
+          </div>
+          <div class="total-card">
+            Expenses<br /><strong id="expensesAmt">₹0.00</strong>
+          </div>
+          <div class="total-card">
+            Total Amount to Collect<br /><strong id="totalAmt">₹0.00</strong>
           </div>
           <div class="total-card">
             Reported<br /><strong id="reportedAmt">₹0.00</strong>
